Arbiter testbench skeleton added

--- a/NoC RTL/validation/arbiter/Makefile
+++ b/NoC RTL/validation/arbiter/Makefile
@@ -1,7 +1,7 @@
 TOP=top.sv
 INTERFACE=interface.sv
-BENCH=bench.sv
-DUT=../../src/router.sv
+BENCH=arb_bench.sv
+DUT=../../src/arbiter.sv
 
 .PHONY: help
 
