updated inb fsm (diagram)

--- a/NoC RTL/doc/router.graffle/data.plist
+++ b/NoC RTL/doc/router.graffle/data.plist
@@ -36,7 +36,7 @@
 	<key>MasterSheets</key>
 	<array/>
 	<key>ModificationDate</key>
-	<string>2012-12-13 19:20:44 +0000</string>
+	<string>2012-12-14 22:22:00 +0000</string>
 	<key>Modifier</key>
 	<string>Dechhin Lama</string>
 	<key>NotesVisible</key>
@@ -16036,7 +16036,209 @@
 			<array>
 				<dict>
 					<key>Bounds</key>
-					<string>{{446, 151}, {94, 28}}</string>
+					<string>{{255.5, 92}, {177, 28}}</string>
+					<key>Class</key>
+					<string>ShapedGraphic</string>
+					<key>FitText</key>
+					<string>YES</string>
+					<key>Flow</key>
+					<string>Resize</string>
+					<key>ID</key>
+					<integer>74</integer>
+					<key>Shape</key>
+					<string>Rectangle</string>
+					<key>Style</key>
+					<dict>
+						<key>fill</key>
+						<dict>
+							<key>Draws</key>
+							<string>NO</string>
+						</dict>
+						<key>shadow</key>
+						<dict>
+							<key>Draws</key>
+							<string>NO</string>
+						</dict>
+						<key>stroke</key>
+						<dict>
+							<key>Draws</key>
+							<string>NO</string>
+						</dict>
+					</dict>
+					<key>Text</key>
+					<dict>
+						<key>Pad</key>
+						<integer>0</integer>
+						<key>Text</key>
+						<string>{\rtf1\ansi\ansicpg1252\cocoartf1187\cocoasubrtf340
+\cocoascreenfonts1{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
+{\colortbl;\red255\green255\blue255;}
+\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardirnatural\qc
+
+\f0\fs24 \cf0 req_port_addr[0] !=0 (from AGU)/\
+en_n_o = 0}</string>
+						<key>VerticalPad</key>
+						<integer>0</integer>
+					</dict>
+					<key>Wrap</key>
+					<string>NO</string>
+				</dict>
+				<dict>
+					<key>Bounds</key>
+					<string>{{59, 48}, {94, 28}}</string>
+					<key>Class</key>
+					<string>ShapedGraphic</string>
+					<key>FitText</key>
+					<string>YES</string>
+					<key>Flow</key>
+					<string>Resize</string>
+					<key>ID</key>
+					<integer>73</integer>
+					<key>Shape</key>
+					<string>Rectangle</string>
+					<key>Style</key>
+					<dict>
+						<key>fill</key>
+						<dict>
+							<key>Draws</key>
+							<string>NO</string>
+						</dict>
+						<key>shadow</key>
+						<dict>
+							<key>Draws</key>
+							<string>NO</string>
+						</dict>
+						<key>stroke</key>
+						<dict>
+							<key>Draws</key>
+							<string>NO</string>
+						</dict>
+					</dict>
+					<key>Text</key>
+					<dict>
+						<key>Pad</key>
+						<integer>0</integer>
+						<key>Text</key>
+						<string>{\rtf1\ansi\ansicpg1252\cocoartf1187\cocoasubrtf340
+\cocoascreenfonts1{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
+{\colortbl;\red255\green255\blue255;}
+\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardirnatural\qc
+
+\f0\fs24 \cf0 pop_req_n_i = 0 /\
+en_n_o = 0}</string>
+						<key>VerticalPad</key>
+						<integer>0</integer>
+					</dict>
+					<key>Wrap</key>
+					<string>NO</string>
+				</dict>
+				<dict>
+					<key>Class</key>
+					<string>LineGraphic</string>
+					<key>ControlPoints</key>
+					<array>
+						<string>{3.3013413, 0.04198499}</string>
+						<string>{-15, 10}</string>
+						<string>{15.000002, -10}</string>
+						<string>{0, 0}</string>
+						<string>{0, 0}</string>
+						<string>{-5.4845276, -31.650356}</string>
+					</array>
+					<key>Head</key>
+					<dict>
+						<key>ID</key>
+						<integer>69</integer>
+					</dict>
+					<key>ID</key>
+					<integer>72</integer>
+					<key>Points</key>
+					<array>
+						<string>{181.08824, 79.224792}</string>
+						<string>{155, 55}</string>
+						<string>{172, 49}</string>
+						<string>{187.82668, 74.471054}</string>
+					</array>
+					<key>Style</key>
+					<dict>
+						<key>stroke</key>
+						<dict>
+							<key>Bezier</key>
+							<true/>
+							<key>HeadArrow</key>
+							<string>FilledArrow</string>
+							<key>LineType</key>
+							<integer>1</integer>
+							<key>TailArrow</key>
+							<string>0</string>
+						</dict>
+					</dict>
+					<key>Tail</key>
+					<dict>
+						<key>ID</key>
+						<integer>69</integer>
+					</dict>
+				</dict>
+				<dict>
+					<key>Class</key>
+					<string>LineGraphic</string>
+					<key>Head</key>
+					<dict>
+						<key>ID</key>
+						<integer>69</integer>
+					</dict>
+					<key>ID</key>
+					<integer>70</integer>
+					<key>Points</key>
+					<array>
+						<string>{414.42136, 142.3902}</string>
+						<string>{275, 111}</string>
+						<string>{236.09293, 105.24614}</string>
+					</array>
+					<key>Style</key>
+					<dict>
+						<key>stroke</key>
+						<dict>
+							<key>HeadArrow</key>
+							<string>FilledArrow</string>
+							<key>LineType</key>
+							<integer>1</integer>
+							<key>TailArrow</key>
+							<string>0</string>
+						</dict>
+					</dict>
+					<key>Tail</key>
+					<dict>
+						<key>ID</key>
+						<integer>28</integer>
+					</dict>
+				</dict>
+				<dict>
+					<key>Bounds</key>
+					<string>{{172, 71}, {63.999985, 59}}</string>
+					<key>Class</key>
+					<string>ShapedGraphic</string>
+					<key>ID</key>
+					<integer>69</integer>
+					<key>Shape</key>
+					<string>Circle</string>
+					<key>Style</key>
+					<dict/>
+					<key>Text</key>
+					<dict>
+						<key>Text</key>
+						<string>{\rtf1\ansi\ansicpg1252\cocoartf1187\cocoasubrtf340
+\cocoascreenfonts1{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
+{\colortbl;\red255\green255\blue255;}
+\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardirnatural\qc
+
+\f0\fs24 \cf0 S2}</string>
+						<key>VerticalPad</key>
+						<integer>0</integer>
+					</dict>
+				</dict>
+				<dict>
+					<key>Bounds</key>
+					<string>{{515, 143}, {94, 28}}</string>
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>FitText</key>
@@ -16085,7 +16287,7 @@ en_n_o = 1}</string>
 				</dict>
 				<dict>
 					<key>Bounds</key>
-					<string>{{503, 318}, {94, 28}}</string>
+					<string>{{534, 339.31519}, {94, 28}}</string>
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>FitText</key>
@@ -16232,7 +16434,7 @@ en_n_o = 0}</string>
 				</dict>
 				<dict>
 					<key>Bounds</key>
-					<string>{{583.20789, 207}, {94, 28}}</string>
+					<string>{{614.20789, 228.31517}, {94, 28}}</string>
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>FitText</key>
@@ -16281,7 +16483,7 @@ en_n_o = 0}</string>
 				</dict>
 				<dict>
 					<key>Bounds</key>
-					<string>{{517.10394, 453}, {94, 28}}</string>
+					<string>{{497, 483}, {94, 28}}</string>
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>FitText</key>
@@ -16428,7 +16630,7 @@ en_n_o = 0}</string>
 				</dict>
 				<dict>
 					<key>Bounds</key>
-					<string>{{200, 130}, {94, 28}}</string>
+					<string>{{211, 171}, {94, 28}}</string>
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>FitText</key>
@@ -16477,7 +16679,7 @@ en_n_o = 0}</string>
 				</dict>
 				<dict>
 					<key>Bounds</key>
-					<string>{{406, 51}, {94, 28}}</string>
+					<string>{{451, 66}, {170, 28}}</string>
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>FitText</key>
@@ -16516,7 +16718,7 @@ en_n_o = 0}</string>
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardirnatural\qc
 
-\f0\fs24 \cf0 pop_req_n_i = 0 /\
+\f0\fs24 \cf0 req_port_addr[0]=0 (from AGU)/\
 en_n_o = 1}</string>
 						<key>VerticalPad</key>
 						<integer>0</integer>
@@ -16531,9 +16733,9 @@ en_n_o = 1}</string>
 					<integer>47</integer>
 					<key>Points</key>
 					<array>
-						<string>{491.52579, 225.9819}</string>
-						<string>{441, 173}</string>
-						<string>{377.28662, 141.68483}</string>
+						<string>{535.94812, 240.74602}</string>
+						<string>{523, 194}</string>
+						<string>{477.28662, 155}</string>
 					</array>
 					<key>Style</key>
 					<dict>
@@ -16565,9 +16767,9 @@ en_n_o = 1}</string>
 					<integer>46</integer>
 					<key>Points</key>
 					<array>
-						<string>{468.64236, 372.72464}</string>
-						<string>{493, 335}</string>
-						<string>{506.21561, 277.84244}</string>
+						<string>{499.64236, 394.03983}</string>
+						<string>{524, 356.31519}</string>
+						<string>{537.21564, 299.15762}</string>
 					</array>
 					<key>Style</key>
 					<dict>
@@ -16602,7 +16804,7 @@ en_n_o = 1}</string>
 						<string>{275, 410.5}</string>
 						<string>{304, 422}</string>
 						<string>{377, 424}</string>
-						<string>{421.49622, 408.87128}</string>
+						<string>{450.52951, 421.09708}</string>
 					</array>
 					<key>Style</key>
 					<dict>
@@ -16662,10 +16864,10 @@ en_n_o = 1}</string>
 					<integer>43</integer>
 					<key>Points</key>
 					<array>
-						<string>{535.99066, 227.2975}</string>
-						<string>{558, 207}</string>
-						<string>{578, 231}</string>
-						<string>{545, 242.75093}</string>
+						<string>{566.99072, 248.61261}</string>
+						<string>{589, 228.31517}</string>
+						<string>{609, 252.31519}</string>
+						<string>{576, 264.06607}</string>
 					</array>
 					<key>Style</key>
 					<dict>
@@ -16708,10 +16910,10 @@ en_n_o = 1}</string>
 					<integer>42</integer>
 					<key>Points</key>
 					<array>
-						<string>{483.79327, 404.73792}</string>
-						<string>{531, 414}</string>
-						<string>{518.30133, 452}</string>
-						<string>{476.46881, 418.24442}</string>
+						<string>{514.79333, 426.0531}</string>
+						<string>{562, 435.31519}</string>
+						<string>{549.30133, 473.31519}</string>
+						<string>{507.46881, 439.5596}</string>
 					</array>
 					<key>Style</key>
 					<dict>
@@ -16841,10 +17043,10 @@ en_n_o = 1}</string>
 					<integer>38</integer>
 					<key>Points</key>
 					<array>
-						<string>{364.05948, 101.02068}</string>
-						<string>{375, 78}</string>
-						<string>{398, 88}</string>
-						<string>{374.7565, 108.02898}</string>
+						<string>{450.74878, 119.82022}</string>
+						<string>{456, 87}</string>
+						<string>{480, 85}</string>
+						<string>{460.22336, 122.51744}</string>
 					</array>
 					<key>Style</key>
 					<dict>
@@ -16878,9 +17080,9 @@ en_n_o = 1}</string>
 					<integer>35</integer>
 					<key>Points</key>
 					<array>
-						<string>{321.40536, 140.91614}</string>
-						<string>{264, 165}</string>
-						<string>{221.96719, 223.49567}</string>
+						<string>{207.1907, 130.3559}</string>
+						<string>{211, 166}</string>
+						<string>{206.53772, 218.59106}</string>
 					</array>
 					<key>Style</key>
 					<dict>
@@ -16897,12 +17099,12 @@ en_n_o = 1}</string>
 					<key>Tail</key>
 					<dict>
 						<key>ID</key>
-						<integer>28</integer>
+						<integer>69</integer>
 					</dict>
 				</dict>
 				<dict>
 					<key>Bounds</key>
-					<string>{{481, 219}, {63.999985, 59}}</string>
+					<string>{{512, 240.31517}, {63.999985, 59}}</string>
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>ID</key>
@@ -16919,14 +17121,14 @@ en_n_o = 1}</string>
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardirnatural\qc
 
-\f0\fs24 \cf0 S5}</string>
+\f0\fs24 \cf0 S6}</string>
 						<key>VerticalPad</key>
 						<integer>0</integer>
 					</dict>
 				</dict>
 				<dict>
 					<key>Bounds</key>
-					<string>{{420, 369}, {63.999985, 59}}</string>
+					<string>{{451, 390.31519}, {63.999985, 59}}</string>
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>ID</key>
@@ -16943,7 +17145,7 @@ en_n_o = 1}</string>
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardirnatural\qc
 
-\f0\fs24 \cf0 S4}</string>
+\f0\fs24 \cf0 S5}</string>
 						<key>VerticalPad</key>
 						<integer>0</integer>
 					</dict>
@@ -16967,7 +17169,7 @@ en_n_o = 1}</string>
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardirnatural\qc
 
-\f0\fs24 \cf0 S3}</string>
+\f0\fs24 \cf0 S4}</string>
 						<key>VerticalPad</key>
 						<integer>0</integer>
 					</dict>
@@ -16991,14 +17193,14 @@ en_n_o = 1}</string>
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardirnatural\qc
 
-\f0\fs24 \cf0 S2}</string>
+\f0\fs24 \cf0 S3}</string>
 						<key>VerticalPad</key>
 						<integer>0</integer>
 					</dict>
 				</dict>
 				<dict>
 					<key>Bounds</key>
-					<string>{{319, 99}, {63.999985, 59}}</string>
+					<string>{{414, 120}, {63.999985, 59}}</string>
 					<key>Class</key>
 					<string>ShapedGraphic</string>
 					<key>ID</key>
@@ -37482,7 +37684,7 @@ Valid_o: 0}</string>
 	<key>WindowInfo</key>
 	<dict>
 		<key>CurrentSheet</key>
-		<integer>0</integer>
+		<integer>3</integer>
 		<key>ExpandedCanvases</key>
 		<array>
 			<dict>
@@ -37503,7 +37705,7 @@ Valid_o: 0}</string>
 		<key>SidebarWidth</key>
 		<integer>120</integer>
 		<key>Zoom</key>
-		<real>0.40000000596046448</real>
+		<real>1</real>
 		<key>ZoomValues</key>
 		<array>
 			<array>
